attempt to fix hyphenation on iOS; update layout on orientation change

--- a/src/index.less
+++ b/src/index.less
@@ -175,8 +175,8 @@ body {
             width: 65%;
         }
 
-        word-break: break-word;
         hyphens: auto;
+        -webkit-hyphens: auto;
     }
 
     #typewriter {
